Update pom.xml (GDMi개발).md